devops/kafka-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafkaclient
spec:
  containers:
  - name: kafka
    image: confluentinc/cp-kafka:7.4.0
    command:
      - sh
      - -c
      - "exec tail -f /dev/null"
